test/compile-fail/scope/use-self-no-name/top.rhdl
mod a {}

use self::a::b;
